fixes #29 : 100vh is not a good idea on mobile while 100% on html and body make it works

--- a/src/global.scss
+++ b/src/global.scss
@@ -33,8 +33,8 @@ $fontstack: 'Raleway', sans-serif;
     display: flex;
     flex-direction: column;
     overflow: hidden;
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     flex: 1;
     .index {
       color: $textColor;
